--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     //exoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.15.0'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
