--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,10 @@
         android:theme="@style/Theme.MusicApp"
         tools:ignore="LockedOrientationActivity">
         <activity android:name=".activities.HomeActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity android:name=".activities.SplashActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +29,7 @@
             </intent-filter>
         </activity>
         <service android:name=".services.PlayerService"
-            android:stopWithTask="true"/>
+            android:stopWithTask="true" />
     </application>
 
 </manifest>
