--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,15 @@
     <application
         android:name=".MusicApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicApp"
         tools:ignore="LockedOrientationActivity">
+        <activity
+            android:name=".activities.PermissionDeniedActivity"
+            android:exported="true" />
         <activity
             android:name=".activities.HomeActivity"
             android:exported="true" />
