--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
 
     <application
         android:name=".MusicApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:allowBackup="false"
+        android:icon="@drawable/ic_icon"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon"
+        android:roundIcon="@drawable/ic_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicApp"
         tools:ignore="LockedOrientationActivity">
