--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+
+        }
+        staging {
+
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
