--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:exported="true" />
         <activity
             android:name=".activities.HomeActivity"
+            android:launchMode="singleTask"
             android:exported="true" />
         <activity
             android:name=".activities.SplashActivity"
