--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,11 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -64,15 +64,15 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     //exoPlayer
-    implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
 
     //Gson
     implementation 'com.google.code.gson:gson:2.8.8'
 
     //Room database
-    def roomVersion = "2.3.0"
+    def roomVersion = "2.4.0"
     implementation("androidx.room:room-runtime:$roomVersion")
     kapt "androidx.room:room-compiler:$roomVersion"
     // optional - Paging 3 Integration
-    implementation("androidx.room:room-paging:2.4.0-beta01")
+    implementation("androidx.room:room-paging:$roomVersion")
 }
